--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,11 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-cap-*.tar
-
+gi-*.tar
 
 # Temporary files for e.g. tests
 /tmp
+
+# Files and directory of IDE
+/.idea/
+gi.iml
